[package]
name = "sciter_issue"
version = "0.1.0"
authors = ["niklasbuesing <totallygenericemail@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciter-rs = { version = "0.5.54", features = ["dynamic", "windowless"] }
glfw = "0.41.0"

[build-dependencies]
gl_generator = "0.14.0"
